--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </form>
                 <div class="mx-2">
                     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                    
+
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                             <label class="form-check-label" for="exampleCheck1">Remember me</label>
                         </div>
                         <button type="submit" class="btn btn-primary">Login</button>
-                        
+
                     </form>
                     <span>Not a member?></span>
                     <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
@@ -128,6 +128,7 @@
             </div>
         </div>
     </div>
+
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -139,7 +140,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/pics/1.jpg" class="d-block w-100" alt="...">
+                <img src="1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to icoder</h2>
                     <p>Technology News,Development and Trends</p>
