--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     prose here.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid"  src="/pics/about1.jpg" alt="">
+                <img class="img-fluid"  src="pics\about1.jpg" alt="">
             </div>
         </div>
         <div class="row featurette d-flex justify-content-center align-items-center">
@@ -73,7 +73,7 @@
                     prose here.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="img-fluid"  src="/pics/about2.jpg" alt="">
+                <img class="img-fluid"  src="pics\about2.jpg" alt="">
             </div>
         </div>
         <div class="row featurette d-flex justify-content-center align-items-center">
@@ -84,7 +84,7 @@
                     prose here.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="/pics/about3.jpg" alt="">
+                <img class="img-fluid" src="pics\about3.jpg" alt="">
             </div>
         </div>
 
