--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="1.jpg" class="d-block w-100" alt="...">
+                <img src="pics\1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to icoder</h2>
                     <p>Technology News,Development and Trends</p>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/pics/2.jpg" class="d-block w-100" alt="...">
+                <img src="pics\2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Best coding blog</h2>
                     <p>Technology News,Development and Trends</p>
@@ -161,7 +161,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="/pics/3.jpg" class="d-block w-100" alt="...">
+            <img src="pics\3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h2>Assume coding</h2>
                 <p>Technology News,Development and Trends</p>
@@ -196,7 +196,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="/pics/thumb1.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="pics\thumb1.jpg" alt="">
 
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="/pics/thumb2.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="pics\thumb2.jpg" alt="">
 
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="/pics/thumb3.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="pics\thumb3.jpg" alt="">
 
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="/pics/thumb4.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="pics\thumb4.jpg" alt="">
 
                     </div>
                 </div>
