--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <title>icoder - heaven for programmer</title>
+    <title>coder - heaven for programmer</title>
 </head>
 
 <body>
@@ -74,7 +74,7 @@
 
     <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2020–2021 icoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2020–2021 coder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
       </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
